test/TestSuite/Syntax/Errors/navigator_exists.tjp
project test "Test" "1.0" 2007-11-16 +2m 

task t "T" {
  start ${projectstart}
}

navigator foo
navigator bar
# MARK: error 10 navigator_exists 
navigator foo
